--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.21.1",
         "body-parser": "^1.19.0",
         "bootstrap": "^4.6.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "moment": "^2.29.1",
         "react": "^17.0.1",
